# AI-Paper-Fetcher

./: .gitignore  LICENSE  README.md  config.yaml  foundational_papers.yaml  pyproject.toml  requirements.txt
data/: reading_list.md
docs/: architecture.md
examples/: sample_reading_list.md
launchd/: com.nokhin.ai-paper-fetcher.weekly.plist
src/ai_paper_fetcher/: __init__.py  arxiv_client.py  citations.py  cli.py  config.py  downloader.py  filtering.py  models.py  network.py  progress.py  ranking.py  recommendations.py  reporting.py  storage.py  text.py  ui.py
tests/: test_arxiv_client.py  test_citations.py  test_cli.py  test_config.py  test_filtering.py  test_progress.py  test_ranking.py  test_recommendations.py  test_reporting.py  test_storage.py  test_text.py
