[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-paper-fetcher"
version = "0.1.0"
description = "A CLI tool for fetching, ranking, and reporting on AI research papers."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Nokhin" }
]
dependencies = [
  "certifi>=2024.8.30",
  "PyYAML>=6.0.2",
]

[project.scripts]
ai-paper-fetcher = "ai_paper_fetcher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
